test/pos/A.scala
trait A extends scala.Object {}

object test {

  def x: A = x;

}

